<resources>
    <string name="app_name">Nicosia History Walkers</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="description_map">
        <item>The curch is dedicated to Panayia Faneromeni and was build in 1872-73 on a site where,
            according to historical reports, there once to a convent, built in the early 14th century.
            In 193, a new bell tower was added which was later fitted with bells manufactured in England
            in 1940-41. The magnificent woud-carvediconostasis dates backto 1659.On the iconostasis is a
            copy of an icon of Panayia Phaneromeni painted in 1924 by renowned artist Adamantios Diamantis
            . The original icon of the Virgin Mary after whichthe church is named was transferred to the
            Byzantine museum of Arcbishop Makarios III Foundation . Among the precious icons of the church
            are those painted by the famous Greek artist Kissonergis, including the &quot;Platytera&quot;
            at the pulpit, the &quot;Pantocrator&quot; and the four  Evagelists at the dome</item>
        <item>The Byzantine Museum located within the Archbishopric in the heart of old Nicosia,
            in the grounds of St. John Cathedral.The Byzantine Museum contains the richest and
            most representative collection of Byzantine art of the island. The core of the collection
            consists of 48 icons, which come from churches all over Cyprus and from the "Synodikon"
            of the church of Panagia Phaneromeni, which initially was intended to house the Cyprus
            Byzantine Museum.About 230 icons dating from 9th to the 19th century, as well as typical
            products of the Byzantine minor art of Cyprus, such as sacred vessels, vestments and books,
            are on display. They are exhibited in three large rooms in the basement of the Centre.
            Occupying a special place in the collection are seven fragments of the 6th century mosaics
            from the apse of the church of Panagia Kanakaria at Lythrankomi and 36 fragments of wall
            painting of the late 15th century from the church of Christ Antiphonitis at Kalogrea. These,
            together with icons from various looted churches in the occupied north, which were recovered
            following court trials or donations from abroad, bear witness to the brutal destruction of
            our cultural heritage and the illicit traffic of antiquities in the Turkish occupied part
            of Cyprus.Opening hours: Monday-Friday: 09:00-16:30 Saturday: 09:00 to 13:00.</item>
        <item>
            The Leventis Museum is located on Ippocratus Street in a restored building
        that constitutes an outstanding example of early 20th century urban architecture.
        The Museum was awarded with the European Museum of the Year Award 1991 of the
        Council of Europe. Its exhibition portrays life in with the collection of coins, maps,
        medieval ans Ottoman dresses, postcards from the British period and items of folk art.
        </item>
        <item>
             The Museum was established by Andreas Nicolaou and is a personal endeavor which
        started 20 years ago. Today, this collection comprises of more than 150 motorcycles.
        At the Museum one can see motorcycles dated between 1914 and 1983, such as AJS,
        MV AQUSTA, MATCHLESS, NORTON, BSA, TRIUMPH, ARIEL, BMW, JAMES, MOTO GUZZI, ROYAL ENFIELD
        to name but a few. All of the motorbikes are lovingly cared for by Andreas who entertains
        visitors with the potted history of each bike. Amongst the special exhibits of the Museum are:
        Three Cyprus Police motorcycles which had been used by the Presidential Guard of Archbishop Makarios
        The motorcycle of EOKA (Ethniki Organosis Kyprion Agoniston or in English National Organisation
            of Cypriot Fighters) fighter Stylianos Lenas which was used for carrying weaponry and ammunition
        The motorcycle of the first motorcycle champion in Cyprus (1970-1973) Turkish-cypriot Zeki Isa
        Military motorcycles used by the army during the Second World War.
        Visitors of this Museum be acquainted with the technological progress and development and
            the culturalheritage of Cyprus in the specialized field of motorcycles. Cypriot visitors
            can witness in the photo gallery of the museum the good old days when both Greek and Turkish
            communities where peacefully living together, with main mean of transport being the motorcycle.
        At the museum you can also the following:
        A room for the projection of films
        A big collection of relevant photographs
        A gift shop
        An accessories shop which offers a big range of spare parts of old motorcycles models
        A small coffee shop
        </item>
        <item>
            The museum is located in the square near the Archbishopric.
        The museum display documents, photographic material, personal belongings
        of the heroes and other memorabilia related to the struggle against British Rule.
        National Struggle Museum is certainly an acquired taste and really only
        suitable for those with an avid interest in Cyprus history.
        The museum was founded after the end of the 1955-1959 National Liberation Struggled,
        by EOKA fighter Christodoulos Papachrysostomou.Specially designed new premises
        opened in 2001. The expenses were covered by the Holy Archebiscopic of Cyprus
        and the Cyprus Ministry of education and Culture. The museum display documents,
        photographic material, personal belongings of the heroes and other memorabilia
        related to the struggle ,when Cyprus fought tirelessly for the ending of British rule.
        </item>
        <item>
            The church stands on the corner of St.Savvas and Aeschylus streets.
            It was built in 1850-51 on the foundations of an earlier church, probably Byzantine.
            lt is a two aisled building with four entrances and a portico built most probably in 1900
            when the belfry was built too. The south wall of the church most probably belongs to the
            previous church. Though the church has no architectural interest, nevertheless it contains
            some old portable icons as well as some old furniture. The church is monotholus built. At the
            west end is a narthex dividing, as is often the case, the west wall of the church from the
            boundary of the road.Inside the building a few relics from the more ancient church on the
            site are still preserved. The modern iconostasis is of the usual character, but behind it
            is preserved the rood from an ancient screen dated 1659. A still more interesting fragment
            is a gilded panel about 1 m. by 50 cm., on which is painted a remarkable
            portrait of a personage dressed in furred robes, and with a large cap of an Eastern type on his head.
        </item>
        <item>
            Famagusta Gate, the most significant of the gates of Venetian Lefkosia (Nicosia), opened
            onto the road that led to the most important harbour town of the island, hence its name.
            It was originally known as ‘Porta Giuliana’ in honour of Giulio Savorgnano, the engineer
            who designed and erected the Venetian walls.
            The gate has an impressive façade and consists of a large vaulted passage with
            a large domed room in the middle, 10.97 metres in diameter. On either side of the
            passage are oblong rooms for the guards.
        </item>


    </string-array>
    <string-array name="titles">
        <item>Phaneromeni Church</item>
        <item>Byzantine Museum</item>
        <item>Leventio Museum</item>
        <item>National Struggle Museum</item>
        <item>Motocycle Museum</item>
        <item>
            Saint Savvas Church
        </item>
        <item>
            Famagusta Gate
        </item>
        <item>
            Famagusta Gate
        </item>

    </string-array>
    <string-array name="descriptions">
        <item>Byzantine Museum</item>
        <item>Leventio Museum</item>
        <item>National Struggle Museum</item>
        <item>Motocycle Museum</item>
        <item>Byzantine Museum</item>
        <item>Leventio Museum</item>
        <item>National Struggle Museum</item>
        <item>Motocycle Museum</item>
    </string-array>
    <string name="title_activity_activity_monuments_ans_museums_list">
        activity_monuments_ans_museums_list
    </string>
    <string name="title_activity_path1">path1</string>
    <string name="kornesios">\t=>Start Point: oxi Square\n
\t=>Head north on Trikoupi\n
\t=>Turn right onto Achilleos\n
\t=>Turn left onto Areos\n
\t=>Turn right onto Onisilou\n
\t=>Turn left onto Xatzigiorgakis Kornesios\n
On your right side is the House of Hadjigiorgakis Kornesios</string>

     <string name="hamam">\t=>Turn left onto Patriarchou Gregoriou\n
\t=>Continue onto Plaeia Tyllirias\n
On your right side is the Hamam Omeriye</string>

    <string name="mosque">\t=>Turn left onto Trikoupi\n
\t=>Slight left onto Areos\n
On your left side is the Mosque Omeriye</string>

     <string name="savvas">\t =>Turn left towards Areos\n
\t=>Turn left onto Areos\n
\t=>Turn left onto Liasidou\n
\t=>Turn left onto Trikoupi\n
\t=>Slight right onto Thrakis\n
\t=>Turn right onto Agiou Savva\n
On your right side is the Agios  Savvas Church </string>

    <string name="faneromeni">\t=>Turn right onto Aisxylou\n
\t=>Turn left onto Sofokleous\n
\t=>Turn right at Onasagorou\n
\tFANEROMENI CHURCH IS ON THE LEFT!!!!\n
   </string>

    <string name="werq">
         </string>
    <string name="title_activity_path2">path2</string>
    <string name="title_activity_path3">Path3</string>

 <string name="famagustagate">\t =>You are in front of Famagusta Gate!\n
     </string>

<string name="agalma">\t=>Continue onto Nikiforou Foka\n
On your left side is the Statue of Liberty!\n
 </string>

  <string name="aisgiannis">\t =>Turn right onto Adamantiou Korai\n
      On your left side is St John Cathedral! </string>

    <string name="vizantino">
\t=>Turn right onto Archbishop's Kyprianou Square \n
\t=>Turn left onto Apostolou Varnava\n
On your left side is the Byzantine Museum! </string>


      <string name="arxiepiskopi">\t=>Turn left onto Isakiou Komninou\n
\tARCHIBISHOP'S PALACE IS ON THE LEFT!!!!\n
   </string>


    <string name="agiasophia">\t =>You are in front of Saint Sophia Cathedral!\n
     </string>

    <string name="xani">\t=>Head south on Kuyumcular Sk toward Arasta Sk\n
        \t=>Turn right onto Arasta Sk\n
      On your left side is the Buyuk Han!\n
 </string>

    <string name="kyreniagate">
\tContinue onto Arasta Sk \n
\t=>Turn right onto Asmaaltı Sk\n
        \t=>  Slight right onto Girne Cd \n
KYRENIA GATE IS ON YOUR LEFT!!!! </string>


</resources>


