<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.elinos.epl361winter15team8.Path3">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/button"
        android:layout_centerHorizontal="true"
        android:text="Path 3"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff5248"
        android:textSize="27sp"

        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView"
        android:background="@drawable/button_choice"
        android:text="HOME"
        android:textStyle="bold"
        android:onClick="home" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button_choice"
        android:text="BACK"
        android:textStyle="bold"
        android:onClick="back" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:text="From Saint Sophia Cathedral to Kyrenia Gate"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff5248"
        android:textSize="19sp"
        android:textStyle="bold|italic" />


    <ScrollView
        android:layout_below="@+id/textView2"
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/map3"
                />


            <TextView
                android:layout_below="@id/imageView"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/agiasophia"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <ImageView
                android:layout_below="@+id/textView3"
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/agiasofia" />

            <TextView
                android:layout_below="@+id/imageView2"
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/xani"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:layout_below="@+id/textView4"
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/xani" />
            <TextView
                android:layout_below="@+id/imageView3"
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/kyreniagate"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:layout_below="@+id/textView5"
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/kyreniagate" />






        </RelativeLayout>


    </ScrollView>
</RelativeLayout>
